Changes with new experience and resume

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,21 +1,14 @@
-/* html {
-    scroll-behavior: smooth;
-} */
-
 html, body {
   font-family: "Open Sans", sans-serif;
   overflow-x: hidden;
-  /* max-width: 100%; */
 }
 
 #headerImage, #about, #skills, #experience, #projects, #contact {
   width: 100vw;
-  /* height: 100vh; */
 }
 
 .one {
   width: 100%;
-  /* padding: 50px; */
   margin-top: 50px;
 }
 
@@ -23,39 +16,24 @@ html, body {
 
 .typeWriter h1 {
   overflow: hidden;
-  /* Ensures the content is not revealed until the animation */
-  /* border-right: .15em solid black; */
-  /* The typwriter cursor */
   white-space: nowrap;
-  /* Keeps the content on a single line */
-  /* margin: 0 auto; */
-  /* Gives that scrolling effect as the typing happens */
   letter-spacing: 0.15em;
   font-size: 34px;
   text-align: justify;
   padding-left: 10px;
-  /* Adjust as needed */
   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
 .typeWriter h2 {
   overflow: hidden;
-  /* Ensures the content is not revealed until the animation */
-  /* border-right: .15em solid black; */
-  /* The typwriter cursor */
   white-space: nowrap;
-  /* Keeps the content on a single line */
-  /* margin: 0 auto; */
-  /* Gives that scrolling effect as the typing happens */
   letter-spacing: 0.15em;
   font-size: 30px;
   text-align: justify;
   padding-left: 10px;
-  /* Adjust as needed */
   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
-/* The typing effect */
 @keyframes typing {
   from {
     width: 0;
@@ -66,19 +44,6 @@ html, body {
   }
 }
 
-/* The typewriter cursor effect */
-/* @keyframes blink-caret {
-
-    from,
-    to {
-        border-color: transparent
-    }
-
-    50% {
-        border-color: black;
-    }
-} */
-
 .two {
   width: 100%;
   padding: 50px 50px 25px 50px;
@@ -87,16 +52,7 @@ html, body {
 
 #about p {
   font-size: 18px;
-  /* text-align: justify;
-    margin: 0 auto;
-    width: 30em; */
 }
-
-/* .center-justified {
-    text-align: justify;
-    margin: 0 auto;
-    width: 30em;
-} */
 
 .three {
   width: 100%;
@@ -105,32 +61,20 @@ html, body {
 
 .four {
     width: 100%;
-    /* padding: 50px; */
     padding: 50px 25px 50px 50px;
 }
 
 .five {
   width: 100%;
-  /* padding: 50px; */
   padding: 50px 25px 25px 50px;
 }
 
 .six {
   width: 100%;
-  /* padding: 50px; */
   padding: 50px 25px 25px 50px;
 }
 
-/* #carouselExampleIndicators {
-    border: 5px solid gray;
-} */
-
-/* .hobbyContainer{
-    overflow: hidden;
-} */
-
 .hobbyContainer img {
-  /* border: 1px solid black; */
   padding: 5px;
   transition: transform 0.5s ease;
 }
@@ -144,13 +88,6 @@ html, body {
 }
 
 @media (max-width: 768px) {
-  /* #image1 {
-        height: 500px;
-    }
-
-    #image2 {
-        height: 500px;
-    } */
   #headerImage {
     height: 500px;
   }
@@ -241,32 +178,6 @@ html, body {
   }
 }
 
-/* @media (min-width: 1439px){
-    #headerImage,
-    #about,
-    #skills,
-    #experience,
-    #projects,
-    #contact{
-        width: 100vw;
-        height: 100vh;
-    }
-} */
-
-/* @media screen and (min-width: 0px) and (max-width: 575px){
-    #skillSet{
-        display: none;
-    }
-
-}
-
-@media screen and (min-width: 576px) {
-    #skillSet {
-        display: -webkit-flex, -ms-flexbox;
-    }
-
-} */
-
 .skillSet{
     align-items: center;
     z-index: 1;
@@ -284,18 +195,14 @@ html, body {
 .skillSet img{
     padding: 50px;
     transition: all 1.0s linear;
-    /* align-content: center; */
-    /* align-items: center; */
 }
 
 .skillContainer img {
-    /* border: 1px solid black; */
     padding: 5px;
     transition: transform 1.0s ease;
 }
 
 .skillContainer:hover img {
-    /* transform: scale(1.5); */
     transform: rotateY(180deg);
 }
 
@@ -304,11 +211,35 @@ html, body {
 }
 
 .contactContainer img {
-  /* border: 1px solid black; */
   padding: 5px;
   transition: transform 0.5s ease;
 }
 
 .contactContainer:hover img {
   transform: scale(1.5);
+}
+
+.NetSuite{
+  width: 100px;
+  height: 100px;
+}
+
+.Boomi{
+  height: 130px;
+  width: 100px;
+}
+
+.Projects{
+  text-align: center;
+}
+
+.Mobiletext{
+  padding: 0px !important;
+}
+
+@media (max-width: 576px){
+  .expRow img, .projectRow img{
+    /* width: 80%; */
+    padding-bottom: 20px;
+  }
 }
